--- a/index.html
+++ b/index.html
@@ -26,46 +26,6 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        /* 모바일 화면을 위한 반응형 테이블 스타일 */
-        @media (max-width: 767px) {
-            .responsive-table thead {
-                display: none; /* 모바일에서 표 헤더 숨기기 */
-            }
-            .responsive-table tbody, .responsive-table tr, .responsive-table td {
-                display: block; /* 모든 요소를 블록으로 변경 */
-                width: 100%;
-            }
-            .responsive-table tr {
-                margin-bottom: 1rem;
-                border: 1px solid #e2e8f0;
-                border-radius: 0.75rem;
-                padding: 0.5rem;
-                background-color: white;
-                box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-            }
-            .responsive-table td {
-                text-align: right; /* 내용을 오른쪽으로 정렬 */
-                padding-left: 50%; /* 라벨을 위한 공간 확보 */
-                position: relative;
-                padding-top: 0.75rem;
-                padding-bottom: 0.75rem;
-                border-bottom: 1px solid #f3f4f6;
-            }
-            .responsive-table tr:last-child td:last-child,
-            .responsive-table td:last-child {
-                border-bottom: none; /* 마지막 셀의 구분선 제거 */
-            }
-            .responsive-table td::before {
-                content: attr(data-label); /* data-label 속성값을 라벨로 사용 */
-                position: absolute;
-                left: 1rem;
-                width: 45%;
-                padding-right: 0.75rem;
-                text-align: left;
-                font-weight: 600;
-                color: #4b5563;
-            }
-        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -167,25 +127,25 @@
             const rows = data.slice(1);
 
             let tableBodyHTML = rows.length > 0 ? rows.map(row => `
-                <tr>
-                    ${row.map((cell, index) => `<td data-label="${headers[index] || ''}">${cell}</td>`).join('')}
+                <tr class="text-gray-700 hover:bg-gray-50">
+                    ${row.map(cell => `<td class="px-4 py-3 text-sm">${cell}</td>`).join('')}
                 </tr>
             `).join('') : `
                 <tr>
-                    <td colspan="${headers.length}" class="text-center p-4">
+                    <td colspan="${headers.length}" class="px-4 py-4 text-center text-gray-500">
                         선택과 일치하는 데이터가 없습니다.
                     </td>
                 </tr>`;
 
             const tableHTML = `
-                <div class="w-full">
-                    <table class="w-full responsive-table">
-                        <thead>
-                            <tr class="text-left text-sm font-semibold text-gray-600 uppercase tracking-wider bg-gray-100">
+                <div class="w-full overflow-hidden rounded-lg shadow-md">
+                    <table class="w-full whitespace-nowrap">
+                        <thead class="bg-gray-100">
+                            <tr class="text-left text-sm font-semibold text-gray-600 uppercase tracking-wider">
                                 ${headers.map(header => `<th class="px-4 py-3">${header}</th>`).join('')}
                             </tr>
                         </thead>
-                        <tbody class="bg-white md:divide-y md:divide-gray-200">${tableBodyHTML}</tbody>
+                        <tbody class="bg-white divide-y divide-gray-200">${tableBodyHTML}</tbody>
                     </table>
                 </div>`;
             dataContainer.innerHTML = tableHTML;
