--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
             let tableBodyHTML = rows.length > 0 ? rows.map(row => `
                 <tr class="text-gray-700 hover:bg-gray-50">
-                    ${row.map(cell => `<td class="px-4 py-3 text-sm">${cell}</td>`).join('')}
+                    ${row.map(cell => `<td class="px-2 py-2 text-xs">${cell}</td>`).join('')}
                 </tr>
             `).join('') : `
                 <tr>
@@ -141,8 +141,8 @@
                 <div class="w-full overflow-hidden rounded-lg shadow-md">
                     <table class="w-full whitespace-nowrap">
                         <thead class="bg-gray-100">
-                            <tr class="text-left text-sm font-semibold text-gray-600 uppercase tracking-wider">
-                                ${headers.map(header => `<th class="px-4 py-3">${header}</th>`).join('')}
+                            <tr class="text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                ${headers.map(header => `<th class="px-2 py-2">${header}</th>`).join('')}
                             </tr>
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200">${tableBodyHTML}</tbody>
