--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
             const headers = data[0];
             const rows = data.slice(1);
 
-            let tableBodyHTML = rows.length > 0 ? rows.map(row => `
+            let tableBodyHTML = rows.length > 0 ? rows.map((row, index) => `
                 <tr class="text-gray-700 hover:bg-gray-50">
+                    <td class="px-2 py-2 text-xs text-center">${index + 1}</td>
                     ${row.map(cell => `<td class="px-2 py-2 text-xs">${cell}</td>`).join('')}
                 </tr>
             `).join('') : `
                 <tr>
-                    <td colspan="${headers.length}" class="px-4 py-4 text-center text-gray-500">
+                    <td colspan="${headers.length + 1}" class="px-4 py-4 text-center text-gray-500">
                         선택과 일치하는 데이터가 없습니다.
                     </td>
                 </tr>`;
@@ -142,6 +143,7 @@
                     <table class="w-full whitespace-nowrap">
                         <thead class="bg-gray-100">
                             <tr class="text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th class="px-2 py-2 text-center">번호</th>
                                 ${headers.map(header => `<th class="px-2 py-2">${header}</th>`).join('')}
                             </tr>
                         </thead>
